# template-cmake-library

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  rebrand.sh  template-config.cmake.in  template.pc.in
.github/workflows/: build-and-test.yml  macos.yml  ubuntu.yml  windows.yml
cmake/: ExecuteAndCaptureStdout.cmake
docs/: CMakeLists.txt
docs/examples/: example1.cpp
docs/main/: annotated.html  classMyVeryOwnClass.html  classarosen_1_1Template_1_1MyVeryOwnClass-members.html  classarosen_1_1Template_1_1MyVeryOwnClass.html  classarosen_1_1Template_1_1MyVeryOwnClassRenamed-members.html  classarosen_1_1Template_1_1MyVeryOwnClassRenamed.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  template_8h_source.html
docs/main/html/: classes.html  dir_4a340657cf19c81d758118f6e9dcf47f.html  index.html
docs/main/search/: all_0.js  all_1.js  classes_0.js  functions_0.js  searchdata.js
include/template/: template.h
src/: template.cpp
test/: CMakeLists.txt  test1.cpp
